# urogue-app

./: CHANGELOG.txt  README.md  TODO.txt  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/urogue/: MainActivity.kt
lib/: board.dart  ffibridge.dart  input.dart  main.dart  sprites.dart
libs/: CMakeLists.txt  api.cpp
libs/PDCurses-3.4/impl/: pdc_impl.c
libs/urogue/: command.c  curses.h  get_play.c  init.c  io.c  main.c  misc.c  new_level.c  options.c  player.c  rip.c  rogue.c  rogue.h  rogue_main.c  save.c  state.c
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
